log
Fri, Mar 28, 2025 11:16:29 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025 11:28:38 AM: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e18500f
Fri, Mar 28, 2025 11:33:41 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
d63fa02
Fri, Mar 28, 2025 11:37:00 AM: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
93258f9
Fri, Mar 28, 2025 11:38:26 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6b19ba4
